@@ -6,6 +6,7 @@ x.x:
 - fixed: no information when no members found
 - fixed: using a non existing function invalidate_cache_for_entity
 - changed: invitation only sites can now have a register page but no link to it
+- changed: order of the access list from least to most access
 
 2.2.1 (2013-05-22):
 
